--- a/buttons.ipynb
+++ b/buttons.ipynb
@@ -39,15 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "f2b5978d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new BPM is 28\n"
+     "ename": "NameError",
+     "evalue": "name 'redis_set' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mredis_set\u001b[49m(bpm\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(redis_get(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbpm\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnew BPM is \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mint\u001b[39m(redis_get(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbpm\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m])))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'redis_set' is not defined"
      ]
     }
    ],
@@ -1153,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
