Wedding animations WIP, sorry Matt

--- a/buttons.ipynb
+++ b/buttons.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "f2b5978d",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new BPM is 28\n"
+      "new BPM is 30\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "f7c3c7e9",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new BPM is 18\n"
+      "new BPM is 20\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "eb50f251",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "ba7d2280",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "looper 1 is ON\n"
+      "looper 1 is OFF\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "b1979148",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "looper 2 is ON\n"
+      "looper 2 is OFF\n"
      ]
     }
    ],
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "dd45a112",
    "metadata": {},
    "outputs": [],
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "614c3ab4",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
        "150"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,17 +599,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e9c9df16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[b'1655873214810', b'0', b'128', b'255']"
+       "[b'1659945230917', b'0', b'128', b'255']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,17 +626,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cbed3578",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[b'1655873215744', b'120', b'1', b'100']"
+       "[b'1659945232183', b'120', b'1', b'100']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "a21befe8",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
        "[b'150']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,17 +722,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "5183607a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1655873229901, 150, 1, 100)"
+       "(1659945232654, 150, 1, 100)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,17 +743,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "5ac33675",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9893507341443679"
+       "0.9242570901923572"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,8 +1130,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "5c4c7605",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "bisect.bisect(((100), (200), (300)), 101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3cf1c70",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1153,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
