Add fireball animation

--- a/buttons.ipynb
+++ b/buttons.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "id": "16e9e196",
    "metadata": {},
    "outputs": [
@@ -18,12 +18,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new BPM is 18\n"
+      "new BPM is 20\n"
      ]
     }
    ],
    "source": [
-    "bpm = 18\n",
+    "bpm = 20\n",
     "\n",
     "redis_set(bpm=bpm)\n",
     "print(\"new BPM is {}\".format(int(redis_get(\"bpm\")[0])))"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "id": "f2b5978d",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new BPM is 30\n"
+      "new BPM is 58\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "id": "f7c3c7e9",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new BPM is 20\n"
+      "new BPM is 18\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "03e6395c",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "strobe is ON\n"
+      "strobe is OFF\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "eb50f251",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fireball launcher is ON\n"
+      "fireball launcher is OFF\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "ba7d2280",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "b1979148",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "id": "4468c2c4",
    "metadata": {},
    "outputs": [
@@ -237,8 +237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "looper 1 hue is 137\n",
-      "looper 2 hue is 123\n"
+      "looper 1 hue is 128\n",
+      "looper 2 hue is 171\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 21,
    "id": "905b5996",
    "metadata": {},
    "outputs": [
@@ -299,8 +299,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "looper 1 hue is 251\n",
-      "looper 2 hue is 124\n"
+      "looper 1 hue is 128\n",
+      "looper 2 hue is 1\n"
      ]
     }
    ],
@@ -503,10 +503,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "e521dd7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'redis_set' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mredis_set\u001b[49m(show_flash\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      2\u001b[0m redis_set(show_launcher\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m redis_set(show_lb_1\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'redis_set' is not defined"
+     ]
+    }
+   ],
    "source": [
     "redis_set(show_flash=1)\n",
     "redis_set(show_launcher=1)\n",
@@ -526,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b30ab65c",
    "metadata": {},
    "outputs": [
@@ -534,19 +546,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting redis\n",
-      "  Downloading redis-4.3.3-py3-none-any.whl (244 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m244.6/244.6 KB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting deprecated>=1.2.3\n",
-      "  Downloading Deprecated-1.2.13-py2.py3-none-any.whl (9.6 kB)\n",
-      "Requirement already satisfied: packaging>=20.4 in /usr/local/lib/python3.10/site-packages (from redis) (21.3)\n",
-      "Collecting async-timeout>=4.0.2\n",
-      "  Downloading async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
-      "Collecting wrapt<2,>=1.10\n",
-      "  Downloading wrapt-1.14.1-cp310-cp310-macosx_10_9_x86_64.whl (35 kB)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.10/site-packages (from packaging>=20.4->redis) (3.0.9)\n",
-      "Installing collected packages: wrapt, async-timeout, deprecated, redis\n",
-      "Successfully installed async-timeout-4.0.2 deprecated-1.2.13 redis-4.3.3 wrapt-1.14.1\n",
+      "Requirement already satisfied: redis in /Users/cnk/.local/share/virtualenvs/huanagetlit-oMbAilgp/lib/python3.9/site-packages (4.3.3)\n",
+      "Requirement already satisfied: deprecated>=1.2.3 in /Users/cnk/.local/share/virtualenvs/huanagetlit-oMbAilgp/lib/python3.9/site-packages (from redis) (1.2.13)\n",
+      "Requirement already satisfied: packaging>=20.4 in /Users/cnk/.local/share/virtualenvs/huanagetlit-oMbAilgp/lib/python3.9/site-packages (from redis) (21.3)\n",
+      "Requirement already satisfied: async-timeout>=4.0.2 in /Users/cnk/.local/share/virtualenvs/huanagetlit-oMbAilgp/lib/python3.9/site-packages (from redis) (4.0.2)\n",
+      "Requirement already satisfied: wrapt<2,>=1.10 in /Users/cnk/.local/share/virtualenvs/huanagetlit-oMbAilgp/lib/python3.9/site-packages (from deprecated>=1.2.3->redis) (1.14.1)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/cnk/.local/share/virtualenvs/huanagetlit-oMbAilgp/lib/python3.9/site-packages (from packaging>=20.4->redis) (3.0.9)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -557,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4bd93d48",
    "metadata": {},
    "outputs": [],
@@ -567,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "dd45a112",
    "metadata": {},
    "outputs": [],
@@ -577,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "614c3ab4",
    "metadata": {},
    "outputs": [
@@ -587,7 +592,7 @@
        "150"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,17 +604,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e9c9df16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[b'1659945230917', b'0', b'128', b'255']"
+       "[b'1660020783916', b'0', b'128', b'255']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,17 +631,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "cbed3578",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[b'1659945232183', b'120', b'1', b'100']"
+       "[b'1660020783946', b'120', b'1', b'100']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "a21befe8",
    "metadata": {},
    "outputs": [
@@ -663,7 +668,7 @@
        "[b'150']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,8 +1157,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "a3cf1c70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa = [x for x in range(10)]\n",
+    "aa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "23bd3347",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del aa[4]\n",
+    "aa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ed5e218b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.get(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e81aad4",
    "metadata": {},
    "outputs": [],
    "source": []
